# RHTML

./: .gitignore  CODEBASE_REVIEW_2025.md  COMPONENT_MACRO_GUIDE.md  CONFIGURATION.md  Cargo.toml  DOCUMENTATION_STATUS.md  DYNAMIC_ROUTING.md  FEATURES_OVERVIEW.md  FEATURE_AUDIT.md  IMPLEMENTATION_SUMMARY.md  LAYOUT_SYSTEM.md  NAMED_PARTIALS_SUMMARY.md  PARTIAL_RENDERING.md  PHASE_IMPLEMENTATION_SUMMARY.md  PROJECT_EXPLORATION_SUMMARY.txt  README.md  REVIEW_SUMMARY.md  ROUTER_EXTRACTION.md  TODO.md  rhtml.toml.example  🚀 IMPLEMENTATION PRIORITIES.md
components/: Alert.rhtml  Alert.rs  Badge.rhtml  Badge.rs  Button.rhtml  Button.rs  Card.rhtml  Card.rs  NotificationPartial.rs  PartialBadge.rhtml  StatusBadge.rs  UserCard.rhtml
docs/: getting-started.md  how-to-define-a-page.md  quick-reference.md
pages/: _error.rhtml  _error.rs  _layout.rhtml  about.rhtml  about.rs  api.rhtml  component-macro-demo.rs  components-demo.rhtml  components-demo.rs  components.rhtml  components.rs  css-demo.rhtml  css-demo.rs  demo.rhtml  demo.rs  htmx-demo.rhtml  htmx-demo.rs  index.rhtml  loops.rhtml  loops.rs  macro-demo.rhtml  macro-demo.rs  match.rhtml  match.rs  partial-demo.rhtml  products.rhtml  request-demo.rhtml  routing.rhtml  users.rhtml  webpage-demo.rhtml
pages/docs/: [...slug].rs
rhtml-macro/: Cargo.toml
rhtml-router/: README.md
rhtmx/: Cargo.toml  FEATURES.md
src/: action_executor.rs  action_handlers.rs  config.rs  example_actions.rs  hot_reload.rs  lib.rs  main.rs  renderer.rs  request_context.rs  router.rs  template_loader.rs  validation_pipeline.rs  websocket.rs
(+28 files in other folders)
