[package]
name = "rhtml_app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rhtml_app"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1.10"
notify = "6.1"
tokio-tungstenite = "0.21"
futures-util = "0.3"
tower-http = { version = "0.5", features = ["fs"] }

[dev-dependencies]
