[package]
name = "rhtml_app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rhtml_app"
path = "src/main.rs"

[dependencies]
rhtml-parser = { path = "rhtml-parser" }
rhtml-router = { path = "rhtml-router" }
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1.10"                                     # Keep for main project if needed
notify = "6.1"
tower-livereload = "0.9"
urlencoding = "2.1"

[dev-dependencies]
